tests/netconvert/import/XML/errors/broken_edge/edge#shape__false1c/errors.netconvert
Error: Attribute 'shape' in definition of a edge Invalid Number Format (double) a.
Quitting (on error).
